test branche créée localement

--- a/defautHtml/index.html
+++ b/defautHtml/index.html
@@ -26,9 +26,8 @@
                     <p>Sinon charger le contenu html. C'est le cadre qui ne bouge pas d'une 'sous page' à l'autre.</p>
                 </div>
             </div>
-            <div class="row" style="margin-top: 3em;">
-                <div class="col-12" id="contenu"></div>
-            </div>
+            <div class="col-12" id="contenu"></div>
+            <!-- <div class="row" style="margin-top: 3em;"></div> -->
         </main>
 
     </body>
