--- a/pages/_index_.html
+++ b/pages/_index_.html
@@ -1,5 +1,5 @@
 <div class="text-center">
     <h1>Bonjour !</h1>
     <p>Bienvenue sur OnePage. Un site d'une page.</p>
-    <p><a id="suivante" class="choix">Page suivante</a></p>
+    <p>Pourquoi ne pas se diriger vers la <a id="p001">page 1</a> ?</p>
 </div>
